--- a/experience.html
+++ b/experience.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Miao’s website</title>
+<title>Experience</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -1477,18 +1477,12 @@ border-radius: 0px;
 
 
 
-<h1 class="title toc-ignore">Miao’s website</h1>
+<h1 class="title toc-ignore">Experience</h1>
 
 </div>
 
 
-<div id="this-is-miaos-webpage" class="section level2">
-<h2>This is Miao’s webpage</h2>
-</div>
-<div id="experience" class="section level2">
-<h2>Experience</h2>
-<p><a href="experience.html">Experience</a></p>
-</div>
+<p><a href="Miao%20Fu%20Resume.pdf">Resume</a></p>
 
 
 
