--- a/experience.html
+++ b/experience.html
@@ -327,6 +327,9 @@ div.tocify {
   <a href="experience.html">About</a>
 </li>
 <li>
+  <a href="plot.html">Plots</a>
+</li>
+<li>
   <a href="mailto:&lt;mfu0860@gmail.com&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
