Edited experience page: added more information. Updated plots to add titles.

--- a/experience.html
+++ b/experience.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Experience</title>
+<title>My Background</title>
 
 <script src="site_libs/header-attrs-2.24/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -324,10 +324,10 @@ div.tocify {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="experience.html">About</a>
+  <a href="experience.html">About Me</a>
 </li>
 <li>
-  <a href="plot.html">Plots</a>
+  <a href="plot.html">Codes for plots</a>
 </li>
 <li>
   <a href="dashboard.html">Dashboard</a>
@@ -353,17 +353,65 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Experience</h1>
+<h1 class="title toc-ignore">My Background</h1>
 
 </div>
 
 
 <p>Hi, I am a first year Master’s student at Columbia University Mailman
-School of Public Health studying Biostatistics.</p>
+School of Public Health studying Biostatistics. I am interested in using
+data-driven techniques to study public health related topics. I wish to
+pursue a career in statistical analysis in biotechnology industry in the
+future. :)</p>
+<div id="work-experience" class="section level2">
+<h2>Work Experience</h2>
+<p>I worked at the Johns Hopkins Hospital as a research coordinator from
+2022 to 2023 for one year in Baltimore, Maryland. My work duties mainly
+included:<br />
+- REDCAP database management<br />
+- IRB documentations<br />
+- Patients recruitment on site<br />
+</p>
+</div>
+<div id="educational-experience" class="section level2">
+<h2>Educational Experience</h2>
+<p>I graduated from Johns Hopkins University in 2022 with a Bachelor’s
+degree in Molecular Cellular Biology. My primary coursework
+include:<br />
+- Molecular Biology<br />
+- Organic Chemistry<br />
+- Neuroscience<br />
+- Genetics<br />
+</p>
+<p>I enrolled in Master’s of Science in Biostatistics at Columbia
+University in 2023 with a concentration in public health data
+science.<br />
+My primary courseworks include:<br />
+- Biostatistical Methods<br />
+- Data Science<br />
+- Survival Analaysis<br />
+- Probability<br />
+</p>
+</div>
+<div id="skills" class="section level2">
+<h2>Skills</h2>
+<p>I obtained the following skills from my educational and work
+experiences:<br />
+- R Studio<br />
+- SAS<br />
+- Github<br />
+- REDCAP<br />
+- Clinical Research<br />
+</p>
+</div>
+<div id="additional-information" class="section level2">
+<h2>Additional Information<br />
+</h2>
 <p>If you want to know more about my professional experience, here is my
 resume: <a href="Miao%20Fu%20Resume.pdf">Resume</a><br />
 Here is my linkedln: <a
 href="https://www.linkedin.com/in/miaofu/">Linkedln</a></p>
+</div>
 
 
 
