--- a/index.html
+++ b/index.html
@@ -324,10 +324,10 @@ div.tocify {
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="experience.html">About</a>
+  <a href="experience.html">About Me</a>
 </li>
 <li>
-  <a href="plot.html">Plots</a>
+  <a href="plot.html">Codes for plots</a>
 </li>
 <li>
   <a href="dashboard.html">Dashboard</a>
@@ -361,11 +361,13 @@ div.tocify {
 <p><img
 src="https://gifdb.com/images/high/hello-madagascar-penguin-7pernnlu5b6aad3y.gif" /></p>
 <p>This is Miao Fu’s webpage. It has information about Miao’s
-professional experience and a dashboard to navigate “The Instacart
-Online Grocery Shopping Dataset 2017”.</p>
-<div id="about-me" class="section level1">
-<h1>About ME</h1>
-<p><a href="experience.html">Professional experience</a></p>
+professional experience and a project on the visualization of weather
+data of New York from NOAA National Climatic Data Center.</p>
+<div id="about-me" class="section level2">
+<h2><a href="experience.html">About me</a></h2>
+</div>
+<div id="my-project" class="section level2">
+<h2><a href="plot.html">My Project</a></h2>
 </div>
 
 
