updated on all pages

--- a/experience.html
+++ b/experience.html
@@ -327,7 +327,7 @@ div.tocify {
   <a href="experience.html">About Me</a>
 </li>
 <li>
-  <a href="plot.html">Codes for plots</a>
+  <a href="plot.html">Project Codes</a>
 </li>
 <li>
   <a href="dashboard.html">Dashboard</a>
